--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ table {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
 }
-article {
+.lado-esquerdo {
   color: white;
   padding: 20px;
   display: block;
@@ -130,7 +130,7 @@ article {
   border-radius: 5px;
   clear: both;
 }
-aside {
+.lado-direito {
   background-color: #32bf84;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
