--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
   background-color: rgb(253 , 251 , 251);
   position: relative;
   top: 260px;
+  font-family: serif;
 }
 
 .subtitle {
@@ -60,12 +61,15 @@ body {
 }
 
 article {
-  width: 50%;
+  width: 90%;
   display: inline-block;
   position: absolute;
   top: -230px;
-  right: 1080px;
+  right: 2px;
   z-index: 1;
+}
+#metodologia {
+  width: 53%;
 }
 
 aside {
@@ -73,7 +77,7 @@ aside {
   display: inline-block;
   position: relative;
   top: 8px;
-  left: 500px;
+  left: 20px;
   right: 15px;
   z-index: 1;
 }
@@ -85,6 +89,7 @@ aside {
 }
 
 .lado-direito {
+  width: 50%;
   text-align: justify;
   padding: 5px;
   border: 2px dotted rgb(161 , 161 , 161);
