--- a/style.css
+++ b/style.css
@@ -1,39 +1,40 @@
 body{
     background-color: rgb(253, 251, 251);
     font-family: Indie Flower;
+    font-size: 30px;
     color: rgb(191, 152, 219);
     width: 1366px;
     height: 768px;
 }
+
 #cabecalho {
-    
-    border: 4px solid red;
+    background-color: rgb(116, 207, 24);
     height: 30px;
-    width: 1250px;
-    margin-top: 10px;
+    width: 1366px;
+    margin: auto;
     padding: 20px;
     position: fixed;
     top: 0px;
 }
+
 #titulo{
-    
     text-align: center;
     font-family: Indie Flower;
     font-size: 25px;
+    margin: auto;
 }
-#navegar{
-    border: 4px solid red;
-    height: 50px;
-    width: 1250px;
-    background-color: hotpink;
-    margin-top: 90px;
-    padding: 20px;
 
+#navegar{
+    height: 10px;
+    width: 1250px;
+    margin-top: 70px;
+    padding: 20px;
 }
+
 .nav-links li{
     display: inline;
-    
 }
+
 #minha_foto{
     border-radius: 90px;
     width: 200px;
@@ -41,8 +42,22 @@ body{
     margin-top: 100px;
 }
 
+#licoes_aprendidas{
+    float: left;
+    width: 615px;
+}
+
+#licoes_a_aprender{
+    float: right;
+    width: 650px;
+}
+
+.tabela{
+    text-align: center;
+}
+
 #rodape{
-    border: 4px solid red;
-    height: 30px;
-    width: 1250px;
+    background-color:rgb(116, 207, 24);
+    width: 1366px;
+    padding-left: 100px;
 }
