Colocando o article e o aside um ao lado do outro.

--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ body{
     width: 650px;
 }
 
+article{
+    display: inline-block;
+    width:50%;
+    float: left;
+}
+
 .tabela{
     text-align: center;
 }
