--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ body{
     text-align: center;
 }
 
+#lista-aprendidas, #lista-a-aprender{
+    text-align: center;
+    width: 49.5%;
+    border: #312521 3px solid;
+    float: left;
+}
+
+ul, li {
+    list-style-type: none;
+}
+
 nav li{
     display: inline-block;
     margin: 25px 10px 15px 25px
@@ -60,19 +71,12 @@ img{
 
 #lists{
     background-color: #ff9585;
-    margin-top: 160px;
+    margin-top: 154px;
     padding: 30px 0 0 0;
-    color: #312521;    
+    color: #312521;
 }
 
-section h2{
-    margin-left: -2%;
-}
 
-ol, section h2 {
-    position: relative;
-    left: 40px;
-}
 ol li, ul li{
     line-height: 30px;
 }
@@ -95,7 +99,56 @@ article p, aside p{
 .container-infromation{
     color: white;
     background-color: #312521;
-    max-width: 90%;
     margin: auto;
     padding: 30px;
+}
+
+#linkedin{
+    color: white;
+    background-color: blue;
+    font-size: 28px;
+    border: white 4px solid;
+    text-align: center;
+    display: block;
+    padding: 30px;
+}
+
+#linkedin:hover{
+    background-color: white;
+    color: blue;
+}
+
+#rodape{
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding: 19px;
+}
+
+.games{
+    color: white;
+    text-align: center;
+    background-color: #FF715B;
+    padding: 20px 0
+}
+
+.games h3{
+    margin-bottom: 15px;
+    font-size: 30px;
+}
+
+table{
+    margin: auto;
+}
+
+th, td {
+    text-align: center;
+    padding: 10px;
+    border: white 1px solid;
+}
+
+tr:hover{
+    color: #FF715B;
+    background-color: white;
+    cursor: pointer;
 }
