--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
-    background-color: rgb(253 , 251 , 251);
-}
+    background-color: rgb(253 , 251 , 251);}
 
 #cabecalho {
-    top: 0px;
-}
+    margin-top: 0px;}
+
+img {
+    width: 300px;}
