Ajustes visando 90% de Arpovacao v2

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
   color: rgb(62 , 76 , 97);
 }
 
-  .sobre_meu_aprendizado {
+  .text {
   color: rgb(175 , 212 , 237);
   font-size: 13px;
   font-style: italic;
