--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
-    background-color: rgb(253 , 251 , 251);}
+    background-color: rgb(253 , 251 , 251);
+}
 
 #cabecalho {
-    margin-top: 0px;}
+    margin-top: 0px;
+}
 
 img {
-    width: 300px;}
+    width: 300px;
+}
