--- a/style.css
+++ b/style.css
@@ -1,9 +1,97 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
   background-color: rgb(253 , 251 , 251);
 }
 
+
 #cabeçalho {
-  position: fixed;
   top: 0px;
   left: 0px;
+  background-color: #F2DCC2;
+  width: 100%;
+  text-align: center;
+  height: 50px;
+  line-height: 50px;
+}
+
+nav {
+  background-color: palegoldenrod;
+  height: 90px;
+}
+
+nav li{
+  display: inline-block;
+  height: 90px;
+  background-color: palegreen;
+  line-height: 90px;
+  padding: 0 20px;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+#minha_foto {
+  width: 70px;
+  margin: 10px;
+  border-radius: 35px;
+  display: inline-block;
+  float: left;
+}
+
+.aprendizado_box {
+  background-color: palegreen;
+  float: left;
+  width: 300px;
+  padding: 0 30px 20px 20px;
+  border-radius: 10px;
+  margin: 0 20px;
 }
