--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+.artigo {
+
+    padding: 50px;
+    margin: 50px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    width: 40%;
+    height: 500;
+    background-color: #AFBAA8;
+    display: inline-block;
+}
+
 body {
 
     background-color: rgb(253, 251, 251);
@@ -7,26 +19,46 @@ body {
 #cabecalho {
 
     background-color: #567568;
-    padding: 10px;
+    padding: 5px;
+    position: fixed;
+    top: 0px;
+    width: 100em;
+
 }
 
 h1 {
 
     color: #4C1E4F;
     font-size: 35px;
-    text-align: center;
+    text-align: center; 
     font-family: sans-serif;
 
 }
 
-#licoes_aprendidas {
+#licoes_a_aprender {
 
-    padding: 15px;
+    padding: 50px;
     margin: 50px;
-    border-radius: 2px solid #7C606B;
+    margin-left: 220px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
     width: 20%;
     height: 250px;
     background-color: #AFBAA8;
+    display: inline-block;
+}
+
+#licoes_aprendidas {
+
+    padding: 50px;
+    margin: 50px;
+    margin-left: 150px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    width: 20%;
+    height: 250px;
+    background-color: #AFBAA8;
+    display: inline-block;
 }
 
 .menu-superior {
@@ -43,15 +75,36 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top:  30px;
+    margin-top:  210px;
     border: 8px solid #4C1E4F;
     border-radius: 50%;
     width: 17em;
 
 }
 
+.passagem {
+
+    padding: 50px;
+    margin: 50px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    width: 30%;
+    height: 300px;
+    background-color: #AFBAA8;
+    display: inline-block;
+
+
+}
+#titulo-aprender {
+
+    text-align: center;
+    margin-top: 10px;
+
+}
+
 #titulo-aprendidas {
 
     text-align: center;
+    margin-top: 10px;
 
 }
