--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body {
   text-align: center;
   height: 50px;
   line-height: 50px;
+  position: fixed;
 }
 
 nav {
@@ -105,4 +106,11 @@ nav a {
   padding: 0 30px 20px 20px;
   border-radius: 10px;
   margin: 0 20px;
+}
+
+#rodape {
+  width: 100%;
+  background-color: #023C40;
+  color: white;
+  line-height: 100px;
 }
