--- a/style.css
+++ b/style.css
@@ -74,9 +74,15 @@ body {
   position: fixed;
 }
 
+#cabeçalho h1{
+  margin: 0px;
+  top: 0px;
+}
+
 nav {
   background-color: palegoldenrod;
   height: 90px;
+  margin-top: 50px;
 }
 
 nav li{
