--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 #minha_foto {
   width: 300px;
   border-radius: 15px;
-  border: 3px solid #24943A ;
+  border: 3px solid #24943a;
 }
 
 /*
@@ -31,15 +31,15 @@ body {
 */
 table.greenTable {
   font-family: Georgia, serif;
-  border: 6px solid #24943A;
-  background-color: #D4EED1;
+  border: 6px solid #24943a;
+  background-color: #d4eed1;
   width: 100%;
   text-align: center;
 }
 
 table.greenTable td,
 table.greenTable th {
-  border: 1px solid #24943A;
+  border: 1px solid #24943a;
   padding: 3px 2px;
 }
 
@@ -48,19 +48,19 @@ table.greenTable tbody td {
 }
 
 table.greenTable thead {
-  background: #24943A;
-  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
-  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
-  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
-  border-bottom: 0px solid #444444;
+  background: #24943a;
+  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943a 100%);
+  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943a 100%);
+  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #24943a 100%);
+  border-bottom: 0px solid #444;
 }
 
 table.greenTable thead th {
   font-size: 19px;
   font-weight: bold;
-  color: #F0F0F0;
+  color: #f0f0f0;
   text-align: center;
-  border-left: 2px solid #24943A;
+  border-left: 2px solid #24943a;
 }
 
 table.greenTable thead th:first-child {
@@ -77,8 +77,8 @@ table.greenTable tfoot .links {
 
 table.greenTable tfoot .links a {
   display: inline-block;
-  background: #FFFFFF;
-  color: #24943A;
+  background: #fff;
+  color: #24943a;
   padding: 2px 8px;
   border-radius: 5px;
 }
