--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   margin: auto;
   background-color: rgb(253, 251, 251);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecalho {
@@ -23,7 +24,7 @@ body {
 #minha_foto {
   width: 300px;
   border-radius: 15px;
-  border: 3px solid #24943a;
+  border: 3px solid #0FA36B;
 }
 
 /*
@@ -31,7 +32,7 @@ body {
 */
 table.greenTable {
   font-family: Georgia, serif;
-  border: 6px solid #24943a;
+  border: 6px solid #0FA36B;
   background-color: #d4eed1;
   width: 100%;
   text-align: center;
@@ -39,7 +40,7 @@ table.greenTable {
 
 table.greenTable td,
 table.greenTable th {
-  border: 1px solid #24943a;
+  border: 1px solid #0FA36B;
   padding: 3px 2px;
 }
 
@@ -48,10 +49,10 @@ table.greenTable tbody td {
 }
 
 table.greenTable thead {
-  background: #24943a;
-  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943a 100%);
-  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943a 100%);
-  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #24943a 100%);
+  background: #0FA36B;
+  background: -moz-linear-gradient(top, #40c994 0%, #0FA36B 66%, #0FA36B 100%);
+  background: -webkit-linear-gradient(top, #40c994 0%, #0FA36B 66%, #0FA36B 100%);
+  background: linear-gradient(to bottom, #40c994 0%, #0FA36B 66%, #0FA36B 100%);
   border-bottom: 0px solid #444;
 }
 
@@ -60,7 +61,7 @@ table.greenTable thead th {
   font-weight: bold;
   color: #f0f0f0;
   text-align: center;
-  border-left: 2px solid #24943a;
+  border-left: 2px solid #0FA36B;
 }
 
 table.greenTable thead th:first-child {
@@ -77,8 +78,8 @@ table.greenTable tfoot .links {
 
 table.greenTable tfoot .links a {
   display: inline-block;
-  background: #fff;
-  color: #24943a;
+  background: white;
+  color: #0FA36B;
   padding: 2px 8px;
   border-radius: 5px;
 }
