--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
 
 }
 
-#licoes_a_aprender {
+.licoes_a_aprender {
 
     padding: 50px;
     margin: 50px;
@@ -49,7 +49,7 @@ h1 {
     display: inline-block;
 }
 
-#licoes_aprendidas {
+.licoes_aprendidas {
 
     padding: 50px;
     margin: 50px;
