--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 header {
   background-color: rgb(253 , 251 , 251);
   grid-area: h;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 10vh;
@@ -25,6 +25,7 @@ header {
 #titulo {
   color: rgb(130 , 87 , 229);
   font-size: 48px;
+  margin-left: 20vw;
 }
 
 .division {
@@ -103,6 +104,7 @@ main {
   background: rgb(29 , 29 , 33);
   border-radius: 0 30px 30px 0;
   padding: 30px;
+  z-index: 30;
 }
 
 #rodape {
