--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-html , body , div , span , applet , object , iframe , blockquote, pre, a , abbr , acronym , address , big , cite , code , del, dfn , em , img , ins , kbd , q , s , samp , small , strike , strong , sub , sup , tt , var , b , u , i , center , dl , dt , dd , ol , fieldset , form , label , legend , table , caption , tbody , tfoot , thead , tr , th , td , article , aside , canvas , details , embed , figure , figcaption , footer , header , hgroup , menu , nav , output , ruby , section , summary , time , mark , audio , video {
+html , body , div , span , iframe , a , img , strike , strong , var , b , u , i , center , dt , dd , ol , form , table , tbody , tfoot , thead , tr , th , td , article , aside , footer , header , hgroup , menu , nav , section {
   margin: 0;
   padding: 0;
   border: 0;
@@ -11,20 +11,19 @@ html , body , div , span , applet , object , iframe , blockquote, pre, a , abbr 
 }
 
 /* HTML5 display-role reset for older browsers */
-aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+aside , details , figcaption , figure , footer , header , hgroup , menu , nav , section {
   display: block;
 }
 
-ol, ul {
+ol , ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote , q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
+blockquote:before , blockquote:after,
 q:before, q:after {
   content: none;
 }
