--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ ul {
 }
 
 .lado-esquerdo {
+  position: absolute;
   width: 400px;
   height: 200px;
   margin-top: 100px;
@@ -152,10 +153,11 @@ ul {
 }
 
 .lado-direito {
+  position: absolute;
   width: 400px;
   height: 200px;
-  margin-top: -218px;
-  margin-left: 400px;
+  margin-top: 100px;
+  margin-left: 720px;
   margin-right: 100px;
   padding: 10px;
   border-radius: 15px;
