--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ table {
   border-radius: 5px;
 }
 .lado-esquerdo {
+  position: relative;
   color: white;
   padding: 20px;
   display: block;
@@ -131,6 +132,7 @@ table {
   clear: both;
 }
 .lado-direito {
+  position: relative;
   background-color: #32bf84;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
